--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "eslint",
     "postinstall": "npx prisma generate"
   },
+  
+    "engines": {
+    "node": ">=20.9.0"
+  }
+  ,
   "dependencies": {
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@hookform/resolvers": "^5.2.2",
